[package]
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2021"
name = "pd-sink-stm32-rs"
version = "0.1.0"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = {version = "0.3.2", features = ["print-defmt"]}

cortex-m = {version = "^0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
critical-section = "1.2.0"

#rtic = { version = "^2.0.1", features = ["thumbv7-backend"] }

# Change this import as required for your MCU.

embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy.git", branch = "main"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "task-arena-size-5120"]}
embassy-futures = {git = "https://github.com/embassy-rs/embassy.git", branch = "main"}
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "time-driver-any", "stm32g071gb", "memory-x", "unstable-pac", "exti"]}
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"]}
embassy-time = {git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "tick-hz-32_768"]}


static_cell = "2.1.0"

embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-io-async = {version = "0.6.1"}

heapless = {version = "0.8.0", features = ["serde"]}
husb238 = {path = "../husb238-rs", features = ["async", "defmt"]}
ina226 = {version = "0.3.0", features = ["async"]}
numtoa = "0.2.4"
portable-atomic = {version = "1.9", features = ["unsafe-assume-single-core"]}
ryu = "1.0.18"
st7789 = {path = "./st7789"}

# cargo build/run
[profile.dev]
codegen-units = 1 
debug = 2 
debug-assertions = true # <-
incremental = false 
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1 
debug = 2 
debug-assertions = true # <-
incremental = false 
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1 
debug = 2 
debug-assertions = false # <-
incremental = false 
lto = 'fat' 
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1 
debug = 2 
debug-assertions = false # <-
incremental = false 
lto = 'fat' 
opt-level = 3 # <-
overflow-checks = false # <-
